# fleetflow

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  package.json  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/routers/: analytics.py  auth.py  drivers.py  expenses.py  maintenance.py  tracking.py  trips.py  vehicles.py
backend/app/core/: config.py  security.py
backend/app/db/: base_class.py  seed.py  session.py
backend/app/models/: driver.py  expense.py  maintenance.py  trip.py  user.py  vehicle.py
backend/app/schemas/: auth.py  driver.py  expense.py  maintenance.py  tracking.py  trip.py  vehicle.py
backend/app/services/: auth_service.py  trip_service.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/api/: test_analytics.py  test_health.py  test_maintenance.py
docs/: CDB.md  PRD.md  TDD.md  implementation-plan.md  phase-1-tasks.md
fleetflow_tests/: README.md  conftest.py  pytest.ini  requirements.txt
fleetflow_tests/pages/: analytics_page.py  base_page.py  dashboard_page.py  driver_page.py  expense_page.py  login_page.py  maintenance_page.py  trip_page.py  vehicle_page.py
fleetflow_tests/tests/: test_e2e_master.py
fleetflow_tests/tests/auth/: test_login.py  (+1 more)
fleetflow_tests/utils/: assertions.py  config.py  driver_factory.py  test_data.py  video_recorder.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
(+29 files in other folders)
